[workspace]
resolver = "2"
members = [
  "bincode",
  "rbpf",
  "sdk",
  "sdk/macro",
  "sdk/program",
]

[workspace.package]
version = "2.0.18"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.82"
arbitrary = "1.3.2"
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
array-bytes = "=1.4.1"
assert_matches = "1.5.0"
base64 = { version = "0.22.1", default-features = false }
bitflags = { version = "2.5.0", default-features = false }
blake3 = { version = "1.5.1", default-features = false }
borsh = { version = "1.5.1", default-features = false, features = ["derive", "unstable__schema"] }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
bv = { package = "nostd-bv", version = "0.11", default-features = false }
bytemuck = "1.16.1"
bytemuck_derive = "1.7.0"
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
derivation-path = { version = "0.2.0", default-features = false }
digest = { version = "0.10.7", default-features = false }
ed25519-dalek = { version = "=1.0.1", default-features = false }
ed25519-dalek-bip32 = { version = "0.2.0", default-features = false }
getrandom = { version = "0.2.10", default-features = false }
hex = "0.4.3"
hmac = { version = "0.12.1", default-features = false }
itertools = "0.12.1"
js-sys = "0.3.69"
lazy_static = { version = "1.4.0", default-features = false }
libsecp256k1 = { version = "0.6.0", default-features = false }
log = { version = "0.4.21", default-features = false }
memmap2 = "0.5.10"
memoffset = "0.9"
num-bigint = { version = "0.4.5", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive", "max-encoded-len"] }
pbkdf2 = { version = "0.11.0", default-features = false }
proc-macro2 = "1.0.85"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quote = "1.0"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rustc_version = "0.4"
rustversion = "1.0.18"
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
serde = { version = "1.0.203", default-features = false }
serde_bytes = "0.11.14"
serde_derive = "1.0.203"
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
serde_with = { version = "2.3.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
siphasher = { version = "0.3.11", default-features = false }
solana-frozen-abi = "=2.0.18"
solana-frozen-abi-macro = "=2.0.18"
solana-logger = "=2.0.18"
solana-program = { path = "sdk/program", default-features = false }
solana-sdk-macro = { path = "sdk/macro" }
sp-io = { version = "38.0.0", default-features = false }
spin = "0.9.8"
static_assertions = "1.1.0"
syn = "2.0"
tiny-bip39 = "0.8.2"
uriparse = "0.6.4"
wasm-bindgen = { version = "0.2", default-features = false }

# Bumped dependencies to support no_std
bincode = { package = "solana-bincode", path = "bincode", default-features = false }
nostd = { version = "0.1", features = ["io"] }
thiserror = { version = "2.0", default-features = false }

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3
