[package]
name = "solana-bincode"
description = "Adapted bincode for Solana SDK"
version = "1.3.3"
authors = ["Haderech Pte. Ltd."]
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["std"]
std = [
  "bincode/std",
  "serde/std",
  "thiserror/std",
]
