[package]
name = "solana-bincode"
description = "Adapted bincode for Solana SDK"
version = "1.3.3"
authors = ["Haderech Pte. Ltd."]
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0", default-features = false, features = ["alloc", "serde"] }
nostd = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["std"]
std = [
  "bincode/std",
  "nostd/std",
  "serde/std",
  "thiserror/std",
]
