[package]
name = "solana_rbpf"
version = "0.8.4"
description = "Virtual machine and JIT compiler for eBPF programs"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/rbpf"
homepage = "https://solana.com/"
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0"
edition = "2018"

include = [
    "src/**",
    "examples/**",
    "tests/**",
    "benches/**",
    "LICENSE*",
    "Cargo.toml",
]

[dependencies]
arbitrary = { version = "1.0", optional = true, features = ["derive"] }
byteorder = { version = "1.2", default-features = false }
combine = "3.8.1"
gdbstub = { version = "0.6.2", optional = true }
goblin = { version = "0.5.1", default-features = false, features = ["alloc", "elf32", "elf64", "endian_fd"] }
hash32 = "0.2.0"
hashbrown = { version = "0.15.2", features = ["alloc"] }
log = { version = "0.4.2", default-features = false }
nostd = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"] }
rustc-demangle = { version = "0.1.24", default-features = false }
scroll = "0.11"
shuttle = { version = "0.7.1", optional = true }
thiserror = { version = "2.0.3", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "errhandlingapi"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["std"]
std = [
    "jit",
    "byteorder/std",
    "goblin/std",
    "log/std",
    "nostd/std",
    "rustc-demangle/std",
    "thiserror/std",
]
jit = ["libc", "winapi"]
fuzzer-not-safe-for-production = ["arbitrary"]
debugger = ["gdbstub"]

[dev-dependencies]
elf = "0.0.10"
json = "0.12"
test_utils = { path = "test_utils/" }
